fixed bugs within redux structure

--- a/develop/sass/objects/_objects.scss
+++ b/develop/sass/objects/_objects.scss
@@ -1,3 +1,13 @@
+//delete these lines
+.col-sm-3{
+	// border: 1px solid #000;
+}
+.elem{
+	// visibility: hidden;
+}
+
+
+
 .elem{
 	background-color: #F2F2F2;
 	border-radius: 3px;
