-added better view -added desired list

--- a/develop/sass/objects/_items.scss
+++ b/develop/sass/objects/_items.scss
@@ -6,57 +6,50 @@
 	margin-bottom: 100px;
 }
 .poison{
-	background-color: #1BCF31;
+	background-color: #1BAF5D;
 }
 .grass{
-	background-color: #3E7614;
-	color: #fff;
+	background-color: #02A085;
 }
 .fire{
-	background-color: #D73D3B;
-	color: #fff;
+	background-color: #FF7561;
 }
 .water{
-	background-color: #84C1D4;
+	background-color: #2D96DD;
 }
 .ground{
-	background-color: #916950;
-	color: #fff;
+	background-color: #D55300;
 }
 .ghost{
 	background-color: #3F3953;
-	color: #fff;
 }
 .rock{
 	background-color: #AEABB6;
 }
 .electric{
-	background-color: #D0DEFB;
+	background-color: #344860;
 }
 .normal{
-	background-color: lighten(grey, 15);
+	background-color: #94A6A7;
 }
 .ice{
 	background-color: #E4EBF3;
 }
 .steel{
 	background-color: #888785;
-	color: #fff;
 }
 .fighting{
-	background-color: #010101;
-	color: #fff;
+	background-color: #2C3E51;
 }
 .psychic{
 	background-color: #D8B72F;
 }
 .flying{
-	background-color: #8A5EFB;
+	background-color: #9C55B8;
 }
 .bug{
-	background-color: #2A2D34;
-	color: #fff;
+	background-color: #172432;
 }
 .fairy{
-	background-color: #FDE2F5;
+	background-color: #FF5DCF;
 }
